updated c3-charts version requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
--e git+https://github.com/keitaroinc/ckanext-c3charts.git@2.8.2#egg=ckanext-c3charts
+-e git+https://github.com/keitaroinc/ckanext-c3charts.git@ckan-2.9#egg=ckanext-c3charts
