--- a/ckanext/amplus/assets/package.json
+++ b/ckanext/amplus/assets/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "node-sass -w scss/ -o css/ --recursive"
   },
   "author": "Goce Mitevski",
   "license": "ISC",
@@ -12,12 +12,12 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
-    "gulp-less": "^4.0.1",
+    "gulp-sass": "^5.1.0",
     "npm": "^6.14.11",
     "typeface-barlow": "0.0.71"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
-    "less": "^3.9.0"
+    "sass": "^1.49.9"
   }
 }
