--- a/ckanext/amplus/assets/package.json
+++ b/ckanext/amplus/assets/package.json
@@ -9,11 +9,12 @@
   "author": "Goce Mitevski",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
-    "sass": "^1.49.9",
+    "gulp-dart-sass": "^1.0.2",
     "npm": "^6.14.11",
+    "sass": "^1.49.9",
     "typeface-barlow": "0.0.71"
   },
   "devDependencies": {
