--- a/ckanext/amplus/assets/package.json
+++ b/ckanext/amplus/assets/package.json
@@ -4,20 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "less --load-path=node_modules --no-source-map --style=compressed assets/less/custom.less assets/amplus.css"
   },
   "author": "Goce Mitevski",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^4.0.0",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean-css": "^3.9.4",
-    "gulp-less": "^4.0.1",
     "npm": "^6.14.11",
     "typeface-barlow": "0.0.71"
   },
   "devDependencies": {
     "bootstrap": "^3.3.7",
-    "less": "^3.9.0"
+    "less": "^3.13.1",
+    "less-plugin-clean-css": "^1.5.1",
+    "less-watch-compiler": "^1.16.3"
   }
 }
