--- a/ckanext/amplus/assets/package.json
+++ b/ckanext/amplus/assets/package.json
@@ -4,19 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "less --load-path=node_modules --no-source-map --style=compressed assets/less/custom.less assets/amplus.css"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Goce Mitevski",
   "license": "ISC",
   "dependencies": {
-    "npm": "^6.14.11",
+    "npm": "^10.5.1",
     "typeface-barlow": "0.0.71"
   },
   "devDependencies": {
-    "bootstrap": "^3.3.7",
-    "less": "^3.13.1",
-    "less-plugin-clean-css": "^1.5.1",
-    "less-watch-compiler": "^1.16.3"
+    "bootstrap": "^5.1.0"
   }
 }
